Add deploy-server scripts to repository

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,14 @@
-wheel
 Flask>=2.0.1
 flask-sqlalchemy>=2.5.1
 flask-socketio>=5.1.1
 flask-wtf>=0.15.1
-python-dotenv>=0.17.1
 Flask-Migrate>=3.0.1
-cryptography==35.0.0
-pycrypto
+python-dotenv>=0.17.1
+cryptography>=36.0.0
+python-socketio>=5.5.0
+websocket-client
 dataclasses
+requests
 flask_cors
+eventlet
 regex
